<resources>
    <string name="app_name">Salma Style</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="these_permissions_are_mandatory_for_this_application_please_allow_access">These Permissions are Mandatory for this Application. Please Allow Access.</string>

    <string name="please_connect_internet_connection">Please Connect Internet Connection ?  </string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="enter_mobileno_password">Enter your mobile no and email</string>
    <string name="will_send_otp_messege">We will send you a otp message</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="not_yet_member">Not yet a member,</string>
    <string name="sign_up">SignUp</string>
    <string name="my_profile">My Profile</string>
    <string name="scan_products">Scan Products</string>
    <string name="setting">Settings</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="clear_all">Clear All</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="want_send_photos">Do you want to add photos and send for review?</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_phone">Please enter Phone Number</string>
    <string name="enter_valid_email">Please enter Valid Email</string>
    <string name="password_validation">Password is too weak</string>
    <string name="enter_password">Please enter Password</string>
    <string name="enter_confirm_password">Please enter Confirm Password</string>
    <string name="enter_old_password">Please enter Old Password</string>
    <string name="pls_enter_same_password">New password and confirm password should be same</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="product_unavailable">Product Unavailable</string>
    <string name="ok">OK</string>
    <string name="scan_product">Scan Products</string>
    <string name="new_credential">Scan Products</string>
    <string name="enter_pas">Enter Password</string>
    <string name="enter_new_pas">Enter New Password</string>
    <string name="update">Update</string>
    <string name="updatake_photo_ingerident">Take the photo of the ingredients</string>
    <string name="update_product_img">Take the photo of the product image</string>
    <string name="next">Next</string>
    <string name="nutrition_fact">Take the photo of nutrition facts</string>
    <string name="submit">Submit</string>
    <string name="product_text_lable">Take the image of the cover if product </string>
    <string name="product_image">Product Status :</string>
    <string name="home">Home</string>
    <string name="ingerident">Ingredients</string>
    <string name="nutri_fact">Nutrition Facts</string>
    <string name="my_profil">My Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="recent_scan">Recent Scan</string>
    <string name="content">Content :</string>
    <string name="english">English</string>
    <string name="farsi">Persian</string>
    <string name="more">more</string>
    <string name="change_language">Change Language</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="Are_you_sure_delete_all_notification">"Do you want to delete this notification?   "</string>
    <string name="new_password">New Password</string>
    <string name="my_account">My Account</string>
    <string name="scan_qr">Scan Qr code</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="ondiet">No on diet</string>
    <string name="occassionaly">occasionally</string>
    <string name="salma_approved">"Salma Approved 👍👍"</string>
    <string name="salma_not_approved">"Salma Not Approved 👎👎"</string>
    <string name="salma_on_diet">"Salma Not Approved While On Diet 👎"</string>
    <string name="salma_occ_appr">"Salma Ocasionally Approved 👍"</string>
    <string name="detail_list">Detail List</string>
    <string name="product_image1">Product Image</string>
    <string name="product_detail">Product Detail</string>
    <string name="upload_image">Upload Image</string>
    <string name="pending">Pending</string>
    <string name="ocasion">Occasionally</string>
    <string name="elect_product_photo">Please select product photo</string>
    <string name="select_ingerident_photo">Please select ingerident photo</string>
    <string name="select_nutrition_photo">Please select nutrition photo</string>
    <string name="photo_not_clear">Images are not clear</string>
    <string name="Are_You_sure_delete_all_notification">Do you want to delete these notifications</string>
    <string name="submit_feedback">It is successfully uploaded to Salma Style. It will be reviewed by Salma. We will send you notification when it’s reviewed </string>
    <string name="user_login_successful">user login successful</string>
    <string name="user_login_failed">user login failed</string>
    <string name="network_failure">this is an actual network failure :( inform the user and possibly retry</string>
    <string name="user_register_successful">user registration successful</string>
    <string name="user_register_failed">user registration failed</string>
    <string name="view_profile">view your profile</string>
    <string name="failed_error">failed</string>
    <string name="profile_updated_successfully">profile updated successfully</string>
    <string name="password_changed_successfully">password changed successfully</string>
    <string name="view_profile_detal">Please View Your Product Details</string>
    <string name="this_product_pending">This Product is in Pending. Please wait for Review by Salma Style</string>
    <string name="this_has_not_scaned">This has not scanned before in Salma Style. Do You Want To Add ?</string>
    <string name="logout_success">logout successfully</string>
    <string name="logout_failed">logout failed</string>
    <string name="notification_clear">notification clear successfully</string>
    <string name="notification_delete">notification delete successfully</string>
    <string name="verification_code">Verification Code</string>
    <string name="veriFydesc">We sent a code to verify account then forgot your password</string>
    <string name="verify">Verify</string>
    <string name="enter_mobileno">Enter your mobile no </string>
    <string name="pass_changed">Password changed successfully </string>
    <string name="add_product_image">Add Product Image</string>
    <string name="add_ingerident_image">Add Ingerident Image</string>
    <string name="add_nutrition_image">Add Nutrition Fact Image</string>
    <string name="add_barcode_image">Add Barcode Image</string>
    <string name="previous">Previous</string>
    <string name="please_select_photo">Please Select Photo</string>
    <string name="approved_text">This is a clean product.you can have in your entire life.</string>
    <string name="rej">Rejected:</string>
    <string name="rejected_txt">This is not a healthy product.you should not have it while you are dieting and even in your life.</string>
    <string name="pen">Pending:</string>
    <string name="pending_txt">This is still pending Salma\'s review.</string>
    <string name="not_clr_photo">Not Clear Photos:</string>
    <string name="not_clr_txt">Some or all of the photos are not clear.</string>
    <string name="occ_txt">Occasionally:</string>
    <string name="occ_txt_line">This is not truly a healthy product but you can enjoy it sometime in your life in limited amount. </string>
    <string name="rej_while_diet">Rejected While dieting:</string>
    <string name="rej_while_diet_txt">This is not an unhealthy product but recommend to not taken during dieting.</string>
    <string name="app_guidance">App Guidance</string>
    <string name="approve_label">Approved:</string>
    <string name="detail">Details</string>
    <string name="scan_prod">Scan Product</string>
    <string name="phone_no_exist">phone no is already exist.</string>
    <string name="click_product_above">Click above to scan product barcode</string>
    <string name="phone_not_exist">phone no is not exist</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_to_delete">Are you sure to Delete account?</string>
    <string name="delete_account_successfully">Delete account successfully</string>
    <string name="scan_prod_barcode_frag">Click above to scan product barcode</string>
    <string name="signup_successfully">signup successfully</string>
</resources>